--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "rohitsynha",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -25,6 +25,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@trpc/server": "^10.34.0",
+    "axios": "^1.4.0",
+    "openai": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zod": "^3.21.4"
