--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "strictBindCallApply": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
+        "resolveJsonModule": true,
         "paths": {
             "@server/*": ["./apps/server/src/*"],
             "@client/*": ["./apps/client/*"]
